<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsActivity"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progress_bar_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_view"
        android:layout_alignBottom="@+id/recycler_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="174dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="265dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="10dp"
        android:text="@string/products"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/searchbar_rounded"
        android:queryHint="Search Products" />

    <LinearLayout
        android:id="@+id/filter_sort_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_view"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="15dp">

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/select_brand"
            style="@style/CustomSpinnerStyle"/>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/select_type"
            style="@style/CustomSpinnerStyle"/>

        <Spinner
            android:id="@+id/spinner_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/select_age"
            style="@style/CustomSpinnerStyle"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_sort_container"
        android:layout_marginTop="-22dp"
        android:layout_marginBottom="65dp"
        android:padding="8dp" />


    <include layout="@layout/bottom_nav_bar" />



</RelativeLayout>
